--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
                             <tr>
                                 <td><%= (i + 1) %></td>
                                 <td><%= data[i].name %></td>
-                                <td><%= data[i].ADDRESS %></td>
+                                <td><%= data[i].address %></td>
                                 <td><%= data[i].phone %></td>
 
                                 <td>
